wrapped content in html tags

--- a/ex3.html
+++ b/ex3.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<head>
-  <title>My Favorite Image</title>
-</head>
-<body>
-  <img src="picture.jpg" />
-</body>
+<html lang="en">
+  <head>
+    <title>My Favorite Image</title>
+  </head>
+  <body>
+    <img src="picture.jpg" />
+  </body>
+</html>
