--- a/ex3.html
+++ b/ex3.html
@@ -4,6 +4,6 @@
     <title>My Favorite Image</title>
   </head>
   <body>
-    <img src="picture.jpg" />
+    <img src="picture.jpg" alt="picture">
   </body>
 </html>
